--- a/config.toml
+++ b/config.toml
@@ -59,14 +59,14 @@ googleAnalytics = ""
 
   [params.social]
   email         = "matheusbaliver@gmail.com"
-  twitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
+  twitter       = "https://twitter.com/matheusbaliver"
+  linkedin      = "https://www.linkedin.com/in/matheus-oliveira-622576139/"
   stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
+  instagram     = "https://www.instagram.com/eubaliver"
+  github        = "https://github.com/mbaliver"
   gitlab        = "full profile url in gitlab"
   youtube       = "full profile url in youtube"
-  whatsapp      = "wa.me service link"
+  whatsapp      = "wa.me/5521979739793"
 
 [[module.mounts]]
 source = "images"
